--- a/courses_app/templates/c_list/update.html
+++ b/courses_app/templates/c_list/update.html
@@ -6,12 +6,17 @@
 
 {% block content %}
   <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title"
-      value="{{ request.form['title'] or c_list['title'] }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] or c_list['body'] }}</textarea>
-    <input type="submit" value="Save">
+    <div class="field">
+
+      <label for="title">Title</label>
+      <input name="title" id="title" class="input"
+             value="{{ request.form['title'] or c_list['title'] }}" required>
+    </div>
+    <div class="field">
+      <label for="body" class="label">Body</label>
+      <textarea name="body" id="body" class="textarea">{{ request.form['body'] or c_list['body'] }}</textarea>
+    </div>
+    <input type="submit" class="button is-primary" value="Save">
   </form>
   <hr>
   <form action="{{ url_for('c_list.delete', id=c_list['id']) }}" method="post">
