tout cassé la bdd

--- a/courses_app/templates/c_list/update.html
+++ b/courses_app/templates/c_list/update.html
@@ -21,4 +21,19 @@
   <form action="{{ url_for('c_list.delete', id=c_list['id']) }}" method="post">
     <input class="button is-danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
   </form>
+
+<hr>
+<div class="content">
+  <div class="card">
+    <div class="card-header">
+      pouet
+    </div>
+  </div>
+    <div class="card">
+      <div class="card-header">
+        <p class="header-title is-primary">poeut</p>
+      </div>
+  </div>
+</div>
+
 {% endblock %}
