--- a/courses_app/templates/base.html
+++ b/courses_app/templates/base.html
@@ -1,18 +1,54 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Flaskr</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='bulma.css') }}">
-<nav>
-  <h1 class="title is-primary">Courses</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>
+
+
+
+<nav> <!-- LA NAVBAR EST INCLUSE ICI-->
+
+<div class="navbar.is-widescreen" role="navigation" aria-label="main navigation">
+
+        <div class="navbar-brand">
+                <a class="navbar-item " href="http://127.0.0.1:5000/">
+                  <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+                </a>
+                <a role="button" class="navbar-burger" #navBurger>
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                  <span aria-hidden="true"></span>
+                </a>
+
+<div class="navbar-menu py-auto" #navMenu>
+
+    <!-- hidden on mobile -->
+    <div class="navbar-start">
+        <!-- Bloc de bouton new si utilisateur co-->
+        {% if g.user %}
+             <p class="control level-item has-text-centered"> <a class=" button navbar-item " href="{{ url_for('c_list.create') }}">New</a></p>
+        {% endif %}
+        <!-- Bloc de bouton new-->
+    </div>
+
+    <div class="navbar-end">
+
+        <div class="field has-addons is-right level-item has-text-centered">
+            {% if g.user %}
+            <div class="box">{{ g.user['username'] }}
+            <p class="control"> <a class="button navbar-item" href="{{ url_for('auth.logout') }}">Log Out</a></p>
+            </div>
+            {% else %}
+            <p class="control"> <a class="is-primary navbar-item" href="{{ url_for('auth.register') }}">Register</a></p>
+            <p class="control"> <a class="is-primary navbar-item" href="{{ url_for('auth.login') }}">Log In</a></p>
+            {% endif %}
+        </div>
+    </div>
+
+    </div>
+</div>
+</nav> <!-- LA NAVBAR S'ARRETE ICI-->
+
+
+
 <section class="content">
   <header>
     {% block header %}{% endblock %}
@@ -20,5 +56,11 @@
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
   {% endfor %}
-  {% block content %}{% endblock %}
+  {% block content %}
+    <div class="tile is-ancestor">
+
+
+
+        </div>
+    {% endblock %}
 </section>
