--- a/courses_app/templates/c_list/index.html
+++ b/courses_app/templates/c_list/index.html
@@ -1,54 +1,12 @@
 
 
-<!-- il faudra ajouter un URLHOME-->
-
-<div class="navbar.is-widescreen" role="navigation" aria-label="main navigation">
-
-        <div class="navbar-brand">
-                <a class="navbar-item " href="http://127.0.0.1:5000/">
-                  <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-                </a>
-                <a role="button" class="navbar-burger" #navBurger>
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                </a>
-
-<div class="navbar-menu py-auto" #navMenu>
-
-    <!-- hidden on mobile -->
-    <div class="navbar-start">
-        <!-- Bloc de bouton new si utilisateur co-->
-        {% if g.user %}
-             <p class="control level-item has-text-centered"> <a class=" button navbar-item " href="{{ url_for('c_list.create') }}">New</a></p>
-        {% endif %}
-        <!-- Bloc de bouton new-->
-    </div>
-
-    <div class="navbar-end">
-
-        <div class="field has-addons is-right level-item has-text-centered">
-            {% if g.user %}
-            <div class="box">{{ g.user['username'] }}
-            <p class="control"> <a class="button navbar-item" href="{{ url_for('auth.logout') }}">Log Out</a></p>
-            </div>
-            {% else %}
-            <p class="control"> <a class="is-primary navbar-item" href="{{ url_for('auth.register') }}">Register</a></p>
-            <p class="control"> <a class="is-primary navbar-item" href="{{ url_for('auth.login') }}">Log In</a></p>
-            {% endif %}
-        </div>
-    </div>
-
-    </div>
-</div>
-
-
-
-<!-- TEST ------->
+<!-- Appelle de la base ------->
 {% extends 'base.html' %}
 
+<!-- Appelle du header : POURQUOI ? ------->
 {% block header %}
 <h1 xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">{% block title %}Listes{% endblock %}</h1>
+
 
 
 
@@ -56,7 +14,7 @@
 
 <!-- fin du header-->
 
-<div class="tile is-ancestor">
+
   <!-- All other tile elements -->
 
   <!-- titre de la liste -->
